Add a code-analyzer component and corresponding service.

--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -20,7 +20,7 @@
       <div class="col-md-6 offset-md-3">
         <form>
           <div class="mb-3">
-            <label for="fileInput" class="form-label">Upload Java File</label>
+            <label for="fileInput" class="form-label">Upload Typescript File</label>
             <div class="input-group">
               <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" style="max-width: 250px;" />
             </div>
