--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -1,41 +1,58 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">Code Smell Detector</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">
+      <img src="assets/SCENTINEL-updated.png" alt="Icon" width="80" height="80" class="d-inline-block align-top">
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  
-  <div class="container mt-4">
-    <h2 class="mb-4 text-success">Code Smell Detector App</h2>
-    <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <form>
-          <div class="mb-3">
-            <label for="fileInput" class="form-label">Upload Typescript File</label>
-            <div class="input-group">
-              <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" style="max-width: 250px;" />
-            </div>
+  </div>
+</nav>
+
+<div class="container mt-4">
+  <h2 class="mb-4">Code Smell Detector App</h2>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <form>
+        <div class="mb-3">
+          <label for="fileInput" class="form-label">Upload Typescript File</label>
+          <div class="input-group">
+            <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" style="max-width: 250px;" />
           </div>
-  
-          <button type="button" class="btn btn-danger" (click)="analyzeCode()">
-            Analyze Code
-          </button>
-        </form>
-  
-        <div *ngIf="codeSmellDetected" class="mt-4 alert alert-danger">
-          <p>Code smells detected!</p>
-          <!-- Display additional information here -->
         </div>
+
+        <button type="button" class="btn btn-danger" (click)="analyzeCode()">
+          Analyze Code
+        </button>
+      </form>
+
+      <div *ngIf="codeSmellDetected" class="mt-4 alert alert-danger">
+        <p>Code smells detected!</p>
+        
+        <!-- Display additional information here -->
+        <table class="table table-bordered mt-3">
+          <thead>
+            <tr>
+              <th scope="col">Function Name</th>
+              <th scope="col">Lines of Code</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Loop through longFunctionReports and display each report in a row -->
+            <tr *ngFor="let report of longFunctionReports">
+              <td>{{ report.functionName }}</td>
+              <td>{{ report.linesOfCode }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
-  
+</div>
