Minor UI changes to center the content and change the background colour.

--- a/code-smell-detector/src/app/home/home.component.css
+++ b/code-smell-detector/src/app/home/home.component.css
@@ -39,3 +39,8 @@ button {
     border-color: #dc3545; /* Adjust the border color of the alert box */
     color: #fff; /* Adjust the font color of the alert box */
 }
+
+.input-group {
+    max-width: 400px;
+    margin-left: 115px;
+}
