--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -17,42 +17,44 @@
 </nav>
 
 <div class="container mt-4">
-  <h2 class="mb-4">Code Smell Detector App</h2>
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
+  <h2 class="mb-4 text-center">Unraveling TypeScript Code Scents</h2>
+  <p class="text-center">Upload a .ts file</p>
+  <div class="d-flex justify-content-center">
+    <div class="col-md-6">
       <form>
         <div class="mb-3">
-          <label for="fileInput" class="form-label">Upload Typescript File</label>
+          <label for="fileInput" class="form-label"></label>
           <div class="input-group">
-            <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" style="max-width: 250px;" />
+            <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" />
+            <button type="button" class="btn btn-danger" (click)="analyzeCode()">Analyze Code</button>
           </div>
         </div>
 
-        <button type="button" class="btn btn-danger" (click)="analyzeCode()">
-          Analyze Code
-        </button>
-      </form>
+        <div *ngIf="!codeSmellDetected && selectedFile" class="mt-4 alert alert-success">
+          <p>No code smells detected! Your code is clean.</p>
+        </div>  
 
-      <div *ngIf="codeSmellDetected" class="mt-4 alert alert-danger">
-        <p>Code smells detected!</p>
-        
-        <!-- Display additional information here -->
-        <table class="table table-bordered mt-3">
-          <thead>
-            <tr>
-              <th scope="col">Function Name</th>
-              <th scope="col">Lines of Code</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Loop through longFunctionReports and display each report in a row -->
-            <tr *ngFor="let report of longFunctionReports">
-              <td>{{ report.functionName }}</td>
-              <td>{{ report.linesOfCode }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+        <div *ngIf="codeSmellDetected" class="mt-4 alert alert-danger">
+          <p>Code smells detected! Specifically, long functions.</p>
+          
+          <!-- Display additional information here -->
+          <table class="table table-bordered mt-3">
+            <thead>
+              <tr>
+                <th scope="col">Function Name</th>
+                <th scope="col">Lines of Code</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Loop through longFunctionReports and display each report in a row -->
+              <tr *ngFor="let report of longFunctionReports">
+                <td>{{ report.functionName }}</td>
+                <td>{{ report.linesOfCode }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </form>
     </div>
   </div>
 </div>
