--- a/code-smell-detector/src/styles.css
+++ b/code-smell-detector/src/styles.css
@@ -5,6 +5,8 @@ html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: #1c1c1c;
+    color: white;
 }
 
 
