--- a/code-smell-detector/src/app/home/home.component.css
+++ b/code-smell-detector/src/app/home/home.component.css
@@ -19,6 +19,14 @@ body {
 
 h2 {
     color: 	#7FFFD4; /* Emerald green color for heading */
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
+
+p {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: larger; 
 }
 
 input,
@@ -43,4 +51,8 @@ button {
 .input-group {
     max-width: 400px;
     margin-left: 115px;
+}
+
+table {
+    background-color: pink;
 }
