Updated regex to detect different types of function signatures.

--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -25,7 +25,7 @@
         <div class="mb-3">
           <label for="fileInput" class="form-label"></label>
           <div class="input-group">
-            <input type="file" class="form-control" id="fileInput" (change)="onFileSelected($event)" />
+            <input type="file" class="form-control" id="fileInput"  accept=".ts" (change)="onFileSelected($event)" />
             <button type="button" class="btn btn-danger" (click)="analyzeCode()">Analyze Code</button>
           </div>
         </div>
