Removed redundant comments from home.component.html and home.component.css.

--- a/code-smell-detector/src/app/gui/gui.component.css
+++ b/code-smell-detector/src/app/gui/gui.component.css
@@ -3,12 +3,12 @@
 
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #343a40; /* Dark background color for the whole page */
-    color: 	#00e1d0; /* Emerald green font color */
+    background-color: #343a40; 
+    color: 	#00e1d0; 
 }
 
 .navbar {
-  margin-bottom: 20px; /* Add space between navbar and content */
+  margin-bottom: 20px; 
 }
 
 .container {
@@ -18,7 +18,7 @@ body {
 }
 
 h2 {
-    color: 	#00e1d0; /* Emerald green color for heading */
+    color: 	#00e1d0;
 }
 
 input,
