Display number of parameters for methods with long parameters.

--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -70,7 +70,7 @@
 
               <tr *ngFor="let report of longParameterReports">
                 <td>{{ report.functionName }}</td>
-                <td>{{ report.parameters }}</td>
+                <td>{{ report.parameters.length }}</td>
               </tr>
             </tbody>
           </table>
