Add a component and corresponding service for duplicate detection.

--- a/code-smell-detector/src/app/home/home.component.html
+++ b/code-smell-detector/src/app/home/home.component.html
@@ -92,6 +92,11 @@
           </div>        
         </div>
 
+      <div class="mt-4 text-center" *ngIf="codeAnalysed && selectedFile">
+        <button type="button" class="btn btn-primary" (click)="findDuplicateMethodsAndFunctions()">Find Duplicates</button>
+      </div>
+
+
       </form>
     </div>
   </div>
