Display highlighted sections indicating duplicate functions/methods in a scrollable window.

--- a/code-smell-detector/src/app/duplicate-finder/duplicate-finder.component.html
+++ b/code-smell-detector/src/app/duplicate-finder/duplicate-finder.component.html
@@ -54,11 +54,10 @@
         </table>
       </div>
       
-
-
-  
-      <!-- <div *ngIf="duplicatesDetected">
-        <p>Here's your code. Scroll to see highlighted sections indicating duplicates.</p>
+    
+      <div *ngIf="duplicatesDetected">
+        <br>
+        <p>Here's your code. Scroll to see highlighted sections with duplicate functions or methods.</p>
         <div id="scrollableWindow" class="scrollable-window">
           <pre style="margin: 0; padding: 0;">
             <code style="margin: 0; padding: 0;">
@@ -71,7 +70,8 @@
             </code>
           </pre>
         </div>
-      </div> -->
+      </div>
+
     </div>
   </div>
   
